--- a/docs/03_typography/css/dark_variant.css
+++ b/docs/03_typography/css/dark_variant.css
@@ -6,6 +6,7 @@
 /*--nv-12-5-cc: 3var(--nv-1-11);*/
 /*--nv-9-5-99: #999999;*/
 --nv-1-5-1a: var(--nv-15-ee);
+--nv-6-5-66: var(--nv-12-5-cc);
 --nv-0: var(--nv-16);
     
 --viewport-icon-bg: var(--sw-5);
@@ -15,25 +16,36 @@
 /*==================== general styling ================*/
 
 @media screen and (max-width: 1023px) {
-    main > ul > li:nth-child(4n + 7),
-    main > ul > li:nth-child(4n + 8) {
+    .web > ul > li:nth-child(4n + 7),
+    .web > ul > li:nth-child(4n + 8) {
         border-top: 1px solid var(--nv-6-5-66);
     }
 }
 
 
 @media screen and (min-width: 1024px) {
-    main > ul > li:first-child {
+    .web > ul > li:first-child {
         visibility: revert;
         background-color: var(--nv-2-22);
     }
-
-    main > ul {
-        background-color: var(--nv-6-5-66);
+    .web > ul {
         background-color: var(--sw-5);
     }
     .viewport::before {
         background-color: var(--viewport-icon-bg);
+    }
+    .email > ul {
+        grid-gap: 0;
+    }
+    .email > ul > li:not(.viewport, .class) {
+        border-top: 1px solid var(--sw-5);
+        border-left: 1px solid var(--sw-5);
+    }
+    .email .class {
+        border-top: 1px solid var(--sw-5);
+    }
+    .email .viewport {
+        border-left: 1px solid var(--sw-5);
     }
 }
 
