--- a/docs/05_cta/css/cta_specs.css
+++ b/docs/05_cta/css/cta_specs.css
@@ -235,7 +235,7 @@ screen and (min-width: 2040px) {
 }
 /*======================== CTA ======================*/
 
-.cp_cta_primary {
+.cp_cta_primary, .cp_cta_secondary {
     padding: 9px 13px;
     font-size: 16px;
 }
