--- a/docs/05_cta/css/cta_ver2.css
+++ b/docs/05_cta/css/cta_ver2.css
@@ -40,6 +40,18 @@
     display: revert;
 }
 
+.cta > ul > li:nth-last-of-type(-n + 9) :is(.horizontal, .vertical) {
+    display: none;
+}
+
+@media screen and (min-width: 640px) and (max-width: 1023px),
+screen and (min-width: 2040px) {
+    .cta > ul > li:nth-last-of-type(-n + 9) .specs li:first-of-type::after {
+    content: "/";
+}
+}
+
+
 @media screen and (min-width: 420px) and (max-width: 639px),
 screen and (min-width: 1600px) and (max-width: 2039px) {
     .specs {
