GeForce New and CTA updates

--- a/docs/05_cta/css/cta_specs.css
+++ b/docs/05_cta/css/cta_specs.css
@@ -271,35 +271,43 @@ screen and (min-width: 2040px) {
 }
 
 .cp_cta_tertiary {
-    padding: 11px 20px 11px 0px;
+    --cp_cta-ter-icon: 20px;
+/*    padding: 11px 20px 11px 0px;*/
     font-size: 16px;
 }
 .cp_cta_tertiary.laptop {
-    padding: 10px 18px 10px 0px;
+    --cp_cta-ter-icon: 18px;
+/*    padding: 10px 18px 10px 0px;*/
     font-size: 14px;
 }
 .cp_cta_tertiary.mobile {
-    padding: 8px 15px 8px 0px;
+    --cp_cta-ter-icon: 15px;
+/*    padding: 8px 15px 8px 0px;*/
     font-size: 12px;
 }
 .cp_cta_tertiary.email {
-    padding: 8px 15px 8px 0px;
+    --cp_cta-ter-icon: 15px;
+/*    padding: 8px 15px 8px 0px;*/
     font-size: 12px;
 }
 
 .cp_cta_tertiary.large {
-    padding: 15px 24px 15px 0px;
+    --cp_cta-ter-icon: 24px;
+/*    padding: 15px 24px 15px 0px;*/
     font-size: 18px;
 }
 .cp_cta_tertiary.large.laptop {
-    padding: 14px 20px 14px 0px;
+    --cp_cta-ter-icon: 20px;
+/*    padding: 14px 20px 14px 0px;*/
     font-size: 16px;
 }
 .cp_cta_tertiary.large.mobile {
-    padding: 12px 18px 12px 0px;
+    --cp_cta-ter-icon: 18px;
+/*    padding: 12px 18px 12px 0px;*/
     font-size: 14px;
 }
 .cp_cta_tertiary.large.email {
-    padding: 12px 18px 12px 0px;
+    --cp_cta-ter-icon: 18px;
+/*    padding: 12px 18px 12px 0px;*/
     font-size: 14px;
 }
