--- a/docs/05_cta/css/cta_ver2.css
+++ b/docs/05_cta/css/cta_ver2.css
@@ -1,208 +1,159 @@
-
 :root {
-    --padding-top-bottom: 0.6em;
-    --padding-left-right: 0.9em;
-    --padding-em: var(--padding-top-bottom) var(--padding-left-right);
-    --padding-em-ter: var(--padding-top-bottom) var(--icon-size) var(--padding-top-bottom) 0px;
-    --padding-em-ter: 0px var(--icon-size) 0px 0px;
+  
+    --cp_cta-minw: 10ch;
     
-    --icon-size: 1.5em;
-    --icon-position: calc(1em / 1.5 * 0.9);
-    --icon-padding: 0.9em;
-    --padding-icon: 0.3em;
+    --cp_cta-padding-tb: 0.6em;
+    --cp_cta-padding-lr: 0.9em;
+    --cp_cta-bar: 0.45em;
+    
+    --cp_cta-icon-size: 1.5em;
+    --cp_cta-icon-padding: 0.45em;
+    --cp_cta-icon-position: calc(1em / 1.5 * 0.9);
+    
+    --cp_cta-fontsize: 12px;
+    --cp_cta-large-fontsize: 14px;
+    
+    --cp_cta-2nd-hover: 1px;
+    
+    --cp_cta-hover: #6AA700;
+    --cp_cta-disabled: #999999;
+    
+    
+    
+}
+
+@media screen and (min-width: 640px) {
+    :root {
+
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    :root {
+
+    --cp_cta-fontsize: 14px;
+    --cp_cta-large-fontsize: 16px;
+    }
+}
+
+@media screen and (min-width: 1350px) {
+    :root {
+        
+    --cp_cta-fontsize: 16px;
+    --cp_cta-large-fontsize: 18px;
+    }
+}
+
+@media screen and (min-width: 2000px) {
+    :root {
+    }
 }
 
 
-
-/*============== general ==============*/
-.specs li {
-    flex: 1 0 40%;
-}
-
-.specs li::before {
-    content: 'Font:';
-    margin-right: 4px;
+.cp_cta_primary {
+    display: block;
+    width: fit-content;
+    padding: var(--cp_cta-padding-tb) var(--cp_cta-padding-lr);
+    background-color: var(--nv-green);
+    color: var(--nv-16);
     font-weight: 700;
+    font-size: var(--cp_cta-fontsize);
+    line-height: 1.25;
+    white-space: nowrap;
+    transition: var(--02transition);
 }
-
-.specs li:nth-child(2)::before {
-    content: 'Hor:';
-}
-
-.specs li:nth-child(3)::before {
-    content: 'Ver:';
-}
-
-.specs li:nth-child(4)::before {
-    content: 'Icon:';
-}
-
-.specs li:nth-child(4) {
-    display: revert;
-}
-
-.cta > ul > li:nth-last-of-type(-n + 9) :is(.horizontal, .vertical) {
-    display: none;
-}
-
-@media screen and (min-width: 640px) and (max-width: 1023px),
-screen and (min-width: 2040px) {
-    .cta > ul > li:nth-last-of-type(-n + 9) .specs li:first-of-type::after {
-    content: "/";
-}
+.cp_cta_primary:is(:hover, :focus, :active) {
+    color: var(--nv-16);
+    background-color: var(--cp_cta-hover);
 }
 
 
-@media screen and (min-width: 420px) and (max-width: 639px),
-screen and (min-width: 1600px) and (max-width: 2039px) {
-    .specs {
-        gap: 24px;
-    }
-
-    .specs li {
-        flex: 0 0 auto;
-    }
-
-    .specs li::before {
-        display: block;
-    }
-
+.cp_cta_secondary {
+    display: block;
+    width: fit-content;
+    padding: var(--cp_cta-padding-tb) var(--cp_cta-padding-lr);
+    border: 2px solid var(--nv-green);
+    background-color: transparent;
+    color: var(--nv-green);
+    font-weight: 700;
+    font-size: var(--cp_cta-fontsize);
+    line-height: 1.25;
+    white-space: nowrap;
+    transition: var(--02transition);
+}
+.cp_cta_secondary:is(:hover, :focus, :active) {
+    color: var(--nv-green);
+    background-color: rgba(118, 185, 0, 0.2);
+/*    padding: calc(var(--cp_cta-padding-tb) - var(--cp_cta-2nd-hover)) calc(var(--cp_cta-padding-lr) - var(--cp_cta-2nd-hover));*/
+/*    border-width: calc(2px + var(--cp_cta-2nd-hover));*/
+/* border-width causes layout shift and performance problems, use box-shadow instead */
+    box-shadow: 0px 0px 0px var(--cp_cta-2nd-hover) var(--nv-green);   
 }
 
-@media screen and (min-width: 640px) and (max-width: 1023px),
-screen and (min-width: 2040px) {
+/*
+.cp_cta_secondary.iconleft:is(:hover, :focus, :active) {
+    padding-left: calc(var(--cp_cta-padding-lr) + var(--cp_cta-icon-size) + var(--cp_cta-icon-padding) - var(--cp_cta-2nd-hover));
+}
+.cp_cta_secondary.iconleft:is(:hover, :focus, :active) .ic_font  {
+    left: calc(1em / 1.5 * 0.9 - var(--cp_cta-2nd-hover));
+}
+*/
 
-    .specs {
-        max-width: unset;
-        gap: unset;
-    }
-
-    .specs li {
-        flex: 0 0 auto;
-    }
-
-    .specs li:nth-child(-n + 3)::after {
-        content: "/";
-        color: var(--nv-9-5-99);
-        margin: 0 16px;
-    }
+.cp_cta_secondary.large {
+  --cp_cta-2nd-hover: 2px;
 }
 
-
-/*===================== cta specs ===================*/
-.cp_cta_primary, .cp_cta_secondary {
-    padding: var(--padding-em);
-    font-size: 16px;
-}
-:is(.cp_cta_primary, .cp_cta_secondary).laptop {
-    padding: var(--padding-em);
-    font-size: 14px;
-}
-:is(.cp_cta_primary, .cp_cta_secondary).mobile {
-    padding: var(--padding-em);
-    font-size: 12px;
-}
-:is(.cp_cta_primary, .cp_cta_secondary).email {
-    padding: var(--padding-em);
-    font-size: 12px;
-}
-
-.cp_cta_primary.large, .cp_cta_secondary.large {
-    padding: var(--padding-em);
-    font-size: 18px;
-}
-:is(.cp_cta_primary.large, .cp_cta_secondary.large).laptop {
-    padding: var(--padding-em);
-    font-size: 16px;
-}
-:is(.cp_cta_primary.large, .cp_cta_secondary.large).mobile {
-    padding: var(--padding-em);
-    font-size: 14px;
-}
-:is(.cp_cta_primary.large, .cp_cta_secondary.large).email {
-    padding: var(--padding-em);
-    font-size: 14px;
-}
 
 .cp_cta_tertiary {
-    padding: var(--padding-em-ter);
-    font-size: 16px;
-}
-.cp_cta_tertiary.laptop {
-    padding: var(--padding-em-ter);
-    font-size: 14px;
-}
-.cp_cta_tertiary.mobile {
-    padding: var(--padding-em-ter);
-    font-size: 12px;
-}
-.cp_cta_tertiary.email {
-    padding: var(--padding-em-ter);
-    font-size: 12px;
-}
-
-.cp_cta_tertiary.large {
-    padding: var(--padding-em-ter);
-    font-size: 18px;
-}
-.cp_cta_tertiary.large.laptop {
-    padding: var(--padding-em-ter);
-    font-size: 16px;
-}
-.cp_cta_tertiary.large.mobile {
-    padding: var(--padding-em-ter);
-    font-size: 14px;
-}
-.cp_cta_tertiary.large.email {
-    padding: var(--padding-em-ter);
-    font-size: 14px;
-}
-
-
-/*================= multiple btn spacing ===============*/
-
-.specs ~ a:nth-of-type(n + 2) {
-    margin-top: 16px;
-}
-
-/*======================= min cha ===============================*/
-
-/*    without / with padding - border-box */
-/*  with font-size=16px, 10ch=96px, 1ch=9.6px=0.6em  */
-/*   with font-size=24px, 10ch=144px, 1ch=14.4px=0.6em */
-
-.minch {
-/*    min-width: 6em;*/
-/*    min-width: 10ch;*/
-    min-width: calc(var(--padding-left-right) + 10ch + var(--padding-left-right));
-    text-align: center;
-}
-.minch:is(.iconleft, .iconright) {
-/*    min-width: calc(var(--icon-size) + var(--icon-padding) + 10ch);*/
-    min-width: calc(var(--padding-left-right) + var(--icon-size) + var(--icon-padding) + 10ch + var(--padding-left-right));
-}
-.testme {
-    line-height: 1;
-    line-height: 1.5;
-}
-
-/*=================icon font / svg =========*/
-
-.iconleft.iconleft.iconleft {
+    display: block;
+    width: fit-content;
+    padding-right: var(--cp_cta-icon-size);
+    color: var(--nv-green);
+    font-weight: 700;
+    font-size: var(--cp_cta-fontsize);
+    line-height: 1.25;
     position: relative;
-    padding-left: calc(var(--padding-left-right) + var(--icon-size) + var(--icon-padding));
+    transition: var(--02transition); 
+}
+.cp_cta_tertiary:is(:hover, :focus, :active) {
+    color: var(--cp_cta-hover);
+}
+.cp_cta_tertiary.chevron::after {
+    content: '';
+    display: block;
+    width: var(--cp_cta-icon-size);
+    height: var(--cp_cta-icon-size);
+    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.cp_cta_tertiary.chevron:is(:hover, :focus, :active)::after {
+    content: '';
+    background-image: url(../assets/ic_chevron_darkgreen_shape_thick.svg);
 }
 
-.ic_font {
+
+
+.large.large {
+    font-size: var(--cp_cta-large-fontsize);
+}
+
+
+
+.iconleft {
+    position: relative;
+    padding-left: calc(var(--cp_cta-padding-lr) + var(--cp_cta-icon-size) + var(--cp_cta-icon-padding));
+}
+.ic_font, .ic_font_chevron {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-/*    font-size: 24px;*/
-  font-size: var(--icon-size);
+  font-size: var(--cp_cta-icon-size);
   line-height: 1;
   letter-spacing: normal;
   text-transform: none;
-/*  display: inline-block;*/
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
@@ -211,46 +162,116 @@ screen and (min-width: 2040px) {
     
     display: block;
     position: absolute;
-    left: var(--icon-position);
+    left: var(--cp_cta-icon-position);
     top: 50%;
     transform: translateY(-50%);
+    transition: var(--02transition);
+/*    transiition for border increase, padding decrease positioning*/
 }
-
 .ic_svg {
     display: block;
-    width: var(--icon-size);
-    height: var(--icon-size);
+    width: var(---cp_cta-icon-size);
+    height: var(--cp_cta-icon-size);
     position: absolute;
-    left: var(--padding-left-right);
+    left: var(--cp_cta-padding-lr);
     top: 50%;
     transform: translateY(-50%);
 }
-
-.cp_cta_primary {
-    line-height: 1;
-/*    icon bleeds into padding */
+.cp_cta_tertiary.iconleft {
+    padding-left: calc(var(--cp_cta-icon-size) + var(--cp_cta-icon-padding))
 }
-
-.cp_cta_tertiary {
-    display: block;
-    width: fit-content;
+.cp_cta_tertiary :is(.ic_font, .ic_svg) {
+    left: 0;
 }
-
-.cp_cta_tertiary::after {
-    width: var(--icon-size);
-    height: var(--icon-size);
-    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;
-}
-.cp_cta_tertiary:is(:hover, :focus, :active)::after {
-    content: '';
-    background-image: url(../assets/ic_chevron_darkgreen_shape_thick.svg);
-}
-
-.cp_cta_tertiary.font::after {
-    content: none;
-}
-
-.ic_font.ter {
+.ic_font_chevron {
     left: unset;
     right: 0;
 }
+
+/*====================== new styles=====================*/
+.cp_cta_primary2 {
+    display: block;
+    width: fit-content;
+    padding: var(--cp_cta-padding-tb) var(--cp_cta-padding-lr) var(--cp_cta-padding-tb) calc(var(--cp_cta-padding-lr) + var(--cp_cta-bar));
+/*    background-color: var(--nv-green);*/
+    color: var(--nv-16);
+    font-weight: 700;
+    font-size: var(--cp_cta-fontsize);
+    line-height: 1.25;
+    white-space: nowrap;
+    transition: var(--02transition);
+    position: relative;
+}
+.cp_cta_primary2::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: var(--nv-3-33);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: var(--02transition);
+    z-index: -2;
+}
+.cp_cta_primary2::before {
+    content: '';
+    display: block;
+    width: var(--cp_cta-bar);
+    height: 100%;
+    background-color: var(--nv-green);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: var(--02transition);
+    z-index: -1;
+}
+.cp_cta_primary2:is(:hover, :focus, :active) {
+/*    color: var(--nv-16);*/
+    color: var(--nv-0);
+    padding: var(--cp_cta-padding-tb) calc(var(--cp_cta-padding-lr) + var(--cp_cta-bar)) var(--cp_cta-padding-tb) var(--cp_cta-padding-lr);
+}
+.cp_cta_primary2:is(:hover, :focus, :active)::before  {
+    content: '';
+    width: calc(100% - var(--cp_cta-bar));
+}
+
+.cp_cta_primary2.option2, .cp_cta_primary2.option2:hover {
+    padding: var(--cp_cta-padding-tb) calc(var(--cp_cta-padding-tb) + var(--cp_cta-bar));
+}
+
+
+.cp_cta_link {
+    display: block;
+/*    if not block element, line-height replies on parent <li> */
+    color: var(--nv-1-11);
+    font-weight: 700;
+    font-size: var(--cp_cta-fontsize);
+    line-height: 1.25;
+    text-decoration: underline 1px solid transparent;
+}
+.cp_cta_link:is(:hover, :focus, :active) {
+/*    color: var(--cp_cta-hover);*/
+    text-decoration-color: var(--nv-green);
+}
+.cp_cta_link .no-break {
+    white-space: nowrap;
+}
+.cp_cta_link .no-break::after {
+    content: '';
+    display: inline-block;
+    width: var(--cp_cta-icon-size);
+    height: 1.25em;
+    vertical-align: text-bottom;
+    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;   
+}
+
+.cp_cta_link.runt::after {
+    content: '';
+    display: inline-block;
+    width: var(--cp_cta-icon-size);
+    height: 1.2em;
+    vertical-align: text-bottom;
+    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;
+}
+/*the chevron may wrap to next line by itself, use span tag to avoid it */
