spacing custom properties update

--- a/docs/css/01_type_color.css
+++ b/docs/css/01_type_color.css
@@ -65,7 +65,7 @@
     --tp_h-huge: 36px;
     --tp_h-large: 28px;
     --tp_h-medium: 24px;
-    --tp_p-small: 20px;
+    --tp_h-small: 20px;
     --tp_h-smaller: 18px;
     --tp_h-smallest: 16px;
     
@@ -91,7 +91,7 @@
     --tp_h-huge: 48px;
     --tp_h-large: 36px;
     --tp_h-medium: 28px;
-    --tp_p-small: 24px;
+    --tp_h-small: 24px;
     --tp_h-smaller: 20px;
     --tp_h-smallest: 18px;
         
@@ -108,7 +108,7 @@
     --tp_h-huge: 60px;
     --tp_h-large: 48px;
     --tp_h-medium: 36px;
-    --tp_p-small: 28px;
+    --tp_h-small: 28px;
     --tp_h-smaller: 24px;
     --tp_h-smallest: 20px;
         
