--- a/docs/06_geforcenews/css/gfnews.css
+++ b/docs/06_geforcenews/css/gfnews.css
@@ -1,9 +1,9 @@
 :root {
 
-    --news-l1-gap: 10px;
-    --news-l2-gap: 16px;
-    --card-l3-gap: 0px;
-    --card-l3-img-margin: var(--space-l);
+    --news-l1-gap: var(--sp_res-px-xxl);
+/*    --news-l2-gap: 16px;*/
+    --card-l3-gap: var(--sp_res-px-l);
+/*    --card-l3-img-margin: var(--sp_res-px-l);*/
 
     --l1-title-clamp: 2;
     --l1-title-clamp-hover: calc(var(--l1-title-clamp) + 1);
@@ -116,13 +116,13 @@ p {
 .md_news-l1 div.wrapper {
     display: grid;
     grid-template-columns: var(--news-l1-grid);
-    grid-gap: var(--space-xxl) var(--news-l1-gap);
+    grid-gap: var(--news-l1-gap);
 }
 
 .md_news-l2 div.wrapper {
     display: grid;
     grid-template-columns: var(--news-l2-grid);
-    grid-gap: var(--space-xxl) var(--news-l2-gap);
+    grid-gap: var(--sp_res-px-xxl) var(--news-l2-gap);
 }
 
 
@@ -143,7 +143,7 @@ p {
 
 .card-l1 figcaption {
     width: 100%;
-    padding: 80px var(--space-m) var(--space-m);
+    padding: 80px var(--sp_res-px-m) var(--sp_res-px-m);
     position: absolute;
     bottom: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4) 80px);
@@ -164,7 +164,7 @@ p {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: var(--l1-intro-clamp);
     overflow: hidden;
-    margin-top: var(--space-m);
+    margin-top: var(--sp_res-px-m);
 }
 
 /*
@@ -172,13 +172,13 @@ p {
     content: "";
     display: block;
     background-color: red;
-    height: var(--space-m);
-    width: var(--space-m);
+    height: var(--sp_res-px-m);
+    width: var(--sp_res-px-m);
 }
 */
 
 .card-l1 .cp_cta_tertiary {
-    margin-top: var(--space-xs);
+    margin-top: var(--sp_res-px-xs);
 }
 
 
@@ -217,11 +217,11 @@ p {
 .card-l2 img {
     aspect-ratio: 16 / 9;
     object-fit: cover;
-    margin-bottom: var(--space-l);
+    margin-bottom: var(--sp_res-px-l);
 }
 
 .card-l2 figcaption > *:not(:first-child) {
-    margin-top: var(--space-s);
+    margin-top: var(--sp_res-px-s);
 }
 
 .card-l2 :is(.date, .keyword) {
@@ -242,7 +242,7 @@ p {
 /*
     display: flex;
     flex-wrap: wrap;
-    gap: 0 var(--space-xs);
+    gap: 0 var(--sp_res-px-xs);
 */
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -272,7 +272,7 @@ p {
 }
 
 .md_news-l3 figure + figure {
-    margin-top: var(--space-xxl);
+    margin-top: var(--sp_res-px-xxl);
 }
 .card-l3 {
     display: grid;
@@ -285,11 +285,11 @@ p {
 .card-l3 img {
     aspect-ratio: 16 / 9;
     object-fit: cover;
-    margin-bottom: var(--card-l3-img-margin);
+/*    margin-bottom: var(--card-l3-img-margin);*/
 }
 
 .card-l3 figcaption > *:not(:first-child) {
-    margin-top: var(--space-s);
+    margin-top: var(--sp_res-px-s);
 }
 
 .card-l3 :is(.date, .keyword) {
@@ -308,7 +308,7 @@ p {
 /*
     display: flex;
     flex-wrap: wrap;
-    gap: 0 var(--space-xs);
+    gap: 0 var(--sp_res-px-xs);
 */
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -342,7 +342,7 @@ p {
     display: grid;
     grid-template-columns: var(--3piece-grid);
     grid-auto-rows: 1fr;
-    grid-gap: var(--space-m);
+    grid-gap: var(--sp_res-px-m);
 }
 .md_3piece figcaption {
 /*    display: none;*/
@@ -357,7 +357,7 @@ p {
 /*    aspect-ratio: 16 / 9;*/
 }
 .vertical-2 figcaption > *:not(:first-child), .vertical-2 .intro {
-    margin-top: var(--space-s);
+    margin-top: var(--sp_res-px-s);
 }
 .vertical-2 :is(.date, .keyword) {
     font-size: 14px;
@@ -387,7 +387,7 @@ p {
 .md_4piece .wrapper {
     display: grid;
     grid-template-columns: var(--md_4piece-grid);
-    grid-gap: var(--space-m); 
+    grid-gap: var(--sp_res-px-m); 
 }
 .md_4piece .large {
     grid-column: var(--md_4piece-large-span);
@@ -404,7 +404,7 @@ p {
 }
 .md_4piece figcaption {
     max-width: 100%;
-    padding: 0.3em;
+    padding: var(--sp_em-xs);
     background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
     right: 0;
