--- a/docs/01_table/css/02_table_vgpu.css
+++ b/docs/01_table/css/02_table_vgpu.css
@@ -166,7 +166,7 @@ tr:not(.transparent, .transparentlast) td:nth-child(13)::after {
         background-color: var(--sw-14-5);
     }
 
-    .vendor td:nth-child(2) {
+    .vendor td:nth-child(2), .vendor .emptycell {
         display: none;
     }
 
