--- a/docs/css/02_base.css
+++ b/docs/css/02_base.css
@@ -6,25 +6,25 @@
     --sp_em-xl: 1.5em;
     --sp_em-xxl: 1.8em;
     
-    --sp_res-rem-xs: 0.25rem;
-    --sp_res-rem-s: 0.5rem;
-    --sp_res-rem-m: 0.75rem;
-    --sp_res-rem-l: 1rem;
-    --sp_res-rem-xl: 1.25rem;
-    --sp_res-rem-xxl: 1.5rem;
+    --sp_rem-xs: 0.25rem;
+    --sp_rem-s: 0.5rem;
+    --sp_rem-m: 0.75rem;
+    --sp_rem-l: 1rem;
+    --sp_rem-xl: 1.25rem;
+    --sp_rem-xxl: 1.5rem;
     
-    --sp_res-px-xs: 4px;
-    --sp_res-px-s: 8px;
-    --sp_res-px-m: 12px;
-    --sp_res-px-l: 16px;
-    --sp_res-px-xl: 20px;
-    --sp_res-px-xxl: 24px;
+    --sp_px-xs: 4px;
+    --sp_px-s: 8px;
+    --sp_px-m: 12px;
+    --sp_px-l: 16px;
+    --sp_px-xl: 20px;
+    --sp_px-xxl: 24px;
     
     --sp_grid-gap: 30px;
-    --sp_res-grid-gap-2col: 16px;
-    --sp_res-grid-gap-3col: 16px;
+    --sp_grid-gap-2col: 16px;
+    --sp_grid-gap-3col: 16px;
     
-    --sp_res-card-padding: 16px;
+    --sp_card-padding: 16px;
 
 
 
@@ -51,24 +51,24 @@
 @media screen and (min-width: 640px) {
     :root {
         
-    --sp_res-rem-xs: 0.5rem;
-    --sp_res-rem-s: 1rem;
-    --sp_res-rem-m: 1.5rem;
-    --sp_res-rem-l: 2rem;
-    --sp_res-rem-xl: 2.5rem;
-    --sp_res-rem-xxl: 3rem;
+    --sp_rem-xs: 0.5rem;
+    --sp_rem-s: 1rem;
+    --sp_rem-m: 1.5rem;
+    --sp_rem-l: 2rem;
+    --sp_rem-xl: 2.5rem;
+    --sp_rem-xxl: 3rem;
     
-    --sp_res-px-xs: 5px;
-    --sp_res-px-s: 9px;
-    --sp_res-px-m: 13px;
-    --sp_res-px-l: 17px;
-    --sp_res-px-xl: 22px;
-    --sp_res-px-xxl: 27px;
+    --sp_px-xs: 5px;
+    --sp_px-s: 9px;
+    --sp_px-m: 13px;
+    --sp_px-l: 17px;
+    --sp_px-xl: 22px;
+    --sp_px-xxl: 27px;
         
-    --sp_res-grid-gap-2col: 24px;
-    --sp_res-grid-gap-3col: 16px;   
+    --sp_grid-gap-2col: 24px;
+    --sp_grid-gap-3col: 16px;   
     
-    --sp_res-card-padding: 20px;
+    --sp_card-padding: 20px;
         
         
     --space-xs: 5px;
@@ -89,24 +89,24 @@
 @media screen and (min-width: 1024px) {
     :root {
             
-    --sp_res-rem-xs: 0.75rem;
-    --sp_res-rem-s: 1.5rem;
-    --sp_res-rem-m: 2.25rem;
-    --sp_res-rem-l: 3rem;
-    --sp_res-rem-xl: 3.75rem;
-    --sp_res-rem-xxl: 4.5rem;
+    --sp_rem-xs: 0.75rem;
+    --sp_rem-s: 1.5rem;
+    --sp_rem-m: 2.25rem;
+    --sp_rem-l: 3rem;
+    --sp_rem-xl: 3.75rem;
+    --sp_rem-xxl: 4.5rem;
     
-    --sp_res-px-xs: 6px;
-    --sp_res-px-s: 10px;
-    --sp_res-px-m: 14px;
-    --sp_res-px-l: 18px;
-    --sp_res-px-xl: 24px;
-    --sp_res-px-xxl: 30px;
+    --sp_px-xs: 6px;
+    --sp_px-s: 10px;
+    --sp_px-m: 14px;
+    --sp_px-l: 18px;
+    --sp_px-xl: 24px;
+    --sp_px-xxl: 30px;
         
-    --sp_res-grid-gap-2col: 32px;
-    --sp_res-grid-gap-3col: 24px;
+    --sp_grid-gap-2col: 32px;
+    --sp_grid-gap-3col: 24px;
         
-    --sp_res-card-padding: 24px;
+    --sp_card-padding: 24px;
         
     --space-xs: 6px;
     --space-s: 10px;
@@ -128,24 +128,24 @@
 @media screen and (min-width: 1350px) {
     :root {
             
-    --sp_res-rem-xs: 1rem;
-    --sp_res-rem-s: 2rem;
-    --sp_res-rem-m: 3rem;
-    --sp_res-rem-l: 4rem;
-    --sp_res-rem-xl: 5rem;
-    --sp_res-rem-xxl: 6rem;
+    --sp_rem-xs: 1rem;
+    --sp_rem-s: 2rem;
+    --sp_rem-m: 3rem;
+    --sp_rem-l: 4rem;
+    --sp_rem-xl: 5rem;
+    --sp_rem-xxl: 6rem;
     
-    --sp_res-px-xs: 7px;
-    --sp_res-px-s: 11px;
-    --sp_res-px-m: 15px;
-    --sp_res-px-l: 19px;
-    --sp_res-px-xl: 26px;
-    --sp_res-px-xxl: 33px;
+    --sp_px-xs: 7px;
+    --sp_px-s: 11px;
+    --sp_px-m: 15px;
+    --sp_px-l: 19px;
+    --sp_px-xl: 26px;
+    --sp_px-xxl: 33px;
         
-    --sp_res-grid-gap-2col: 48px;
-    --sp_res-grid-gap-3col: 32px; 
+    --sp_grid-gap-2col: 48px;
+    --sp_grid-gap-3col: 32px; 
     
-    --sp_res-card-padding: 32px;
+    --sp_card-padding: 32px;
         
     --space-xs: 7px;
     --space-s: 11px;
